# postgresql-simple-bind

./: .travis.yml  CHANGELOG.md  README.md  default.nix  postgresql-simple-bind.cabal
examples/: Common.hs  ExMessages.hs  ExNumDumpster.hs  ExUsers.hs  Main.hs
examples/sql/: messages-patch-1.sql  messages-patch-2.sql  messages.sql  numdumpster.sql  users.sql
examples/sql/messages/functions/: get_new_messages.sql  mark_as_read.sql  send_message.sql
examples/sql/messages/tables/: messages.sql
examples/sql/messages/updates/: patch-2.sql
examples/sql/numdumpster/functions/: add_num.sql  clear.sql  get_all_nums.sql  get_last_num.sql  get_range.sql  get_val.sql
examples/sql/numdumpster/tables/: numdumpster.sql
examples/sql/users/domains/: varchar2.sql
examples/sql/users/functions/: _nvl.sql  add_user.sql  bindings.sql  del_user.sql  get_users.sql  get_users_ex.sql
examples/sql/users/tables/: users.sql
examples/sql/users/types/: t_users.sql
src/Database/PostgreSQL/Simple/: Bind.hs
src/Database/PostgreSQL/Simple/Bind/: Common.hs  Implementation.hs  Parser.hs  Representation.hs  Types.hs  Util.hs  Utils.hs
tests/: Common.hs  Main.hs  TestRepresentation.hs  TestTypes.hs
tests/Test/: Common.hs  PGArgument.hs  PGComment.hs  PGConstant.hs  PGDeclaration.hs  PGExpression.hs  PGFunction.hs  PGIdentifier.hs  PGResult.hs  PGString.hs  PGType.hs  Utils.hs
tests/samples/: declarations-0001.sql  declarations-0002.sql  declarations-0003.sql  declarations-0004.sql
